# fhex

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: from_hex.rs  roundtrip.rs
src/: fhex.rs  lib.rs
